# AMM-ML

./: .gitignore  README.md  pyproject.toml  run.py
config/: business_units.yaml  cost_model.yaml  prioritization.yaml  risk_states.yaml  settings.yaml
data/db/: feature_store.duckdb  knowledge_graph.db  markov_states.sqlite
data/imports/: cmdb_sample_assets.csv
models/: model_registry.sqlite
src/: __init__.py  config.py  models.py
src/backtesting/: backtesting_engine.py
src/layer0_knowledge_graph/: __init__.py  data_freshness_monitor.py  entity_resolution.py  graph_store.py  import_manager.py  ontologies.py
src/layer1_feature_engineering/: __init__.py  feature_assembler.py  feature_store.py  historical_statistics.py  markov_feedback_features.py  temporal_features.py  textual_embeddings.py  threat_intel_features.py  topological_features.py
src/layer2_ml_engine/: __init__.py  acc.py  confidence_degradation.py  elp.py  inference_engine.py  isa.py  model_version_manager.py
src/layer3_markov_engine/: __init__.py  absorption_time_analyzer.py  chapman_kolmogorov.py  coupled_markov_networks.py  markov_engine.py  risk_decay_calculator.py  state_manager.py  tpm_computer.py  warm_start_estimator.py
src/layer4_risk_aggregation/: __init__.py  attack_path_propagation.py  business_unit_rollup.py  prioritization.py  risk_aggregation_engine.py  temporal_risk_forecasting.py
src/layer5_presentation/: __init__.py  app.py  graphql_api.py  rest_api.py  service_layer.py
src/pipeline/: daily_batch.py  feedback_loop.py  on_demand.py
tests/: test_core.py
(+17 files in other folders)
